--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@testing-library/user-event": "^14.5.1",
     "json-server": "^1.0.0-alpha.21",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
